# oop-labs-mai-v19

./: CMakeLists.txt  README.md  l1.cpp  test.cpp
